# kanae

./: compose.yml
.github/workflows/: integration.yml
bot/: Cargo.toml  Dockerfile  config.example
bot/src/: main.rs
bot/src/base/: mod.rs  state.rs
bot/src/core/: hook.rs  mod.rs  state.rs
bot/src/helper/: alias.rs  mod.rs
bot/src/owner/: command.rs  mod.rs  parameter.rs  state.rs
